fix z-index

--- a/src/styles/components/_switch.scss
+++ b/src/styles/components/_switch.scss
@@ -125,6 +125,7 @@
     border: 0 0 15px 15px;
     overflow: hidden;
     transition: 0.3s ease;
+    z-index: 22;
   }
 
   &__input-suggest-inner {
